{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 79,
  "lineage": "2074443c-d699-6677-d37c-e569c09f1519",
  "resources": [
    {
      "module": "module.Nat_Gateway[\"nat1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e22fc967100da6ed",
            "arn": "arn:aws:ec2:us-east-1:267527029953:elastic-ip/eipalloc-0e22fc967100da6ed",
            "association_id": "eipassoc-051ebcce10248f876",
            "domain": "vpc",
            "id": "eipalloc-0e22fc967100da6ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-041b77084f6c6f929",
            "private_dns": "ip-10-0-0-69.ec2.internal",
            "private_ip": "10.0.0.69",
            "public_dns": "ec2-13-216-145-122.compute-1.amazonaws.com",
            "public_ip": "13.216.145.122",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.Nat_Gateway[\"nat1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e22fc967100da6ed",
            "association_id": "eipassoc-051ebcce10248f876",
            "connectivity_type": "public",
            "id": "nat-07841a1b32cc09f12",
            "network_interface_id": "eni-041b77084f6c6f929",
            "private_ip": "10.0.0.69",
            "public_ip": "13.216.145.122",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f2c343d0a97ad629",
            "tags": {
              "Name": "My-NAT"
            },
            "tags_all": {
              "Name": "My-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway[\"Igw1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:internet-gateway/igw-005217b3af471db5b",
            "id": "igw-005217b3af471db5b",
            "owner_id": "267527029953",
            "region": "us-east-1",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pri1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048440738e925889d",
            "region": "us-east-1",
            "route_table_id": "rtb-03e644e4b639e5b50",
            "subnet_id": "subnet-03aa649d29f590c31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pri2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9b0d836965a6cbe",
            "region": "us-east-1",
            "route_table_id": "rtb-03e644e4b639e5b50",
            "subnet_id": "subnet-0928958fd18958ac0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pri3\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0467afcddbc2a7ddb",
            "region": "us-east-1",
            "route_table_id": "rtb-03e644e4b639e5b50",
            "subnet_id": "subnet-0b6fbb803c3d2bba2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pub1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b062086888bcb65",
            "region": "us-east-1",
            "route_table_id": "rtb-0b1dac3537c4c13bf",
            "subnet_id": "subnet-0f2c343d0a97ad629"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pub2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09746f1aa275242ad",
            "region": "us-east-1",
            "route_table_id": "rtb-0b1dac3537c4c13bf",
            "subnet_id": "subnet-03c39e458514f2a95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pub3\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebdf19a9226d084b",
            "region": "us-east-1",
            "route_table_id": "rtb-0b1dac3537c4c13bf",
            "subnet_id": "subnet-0133b2b34ab1211c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"privatert1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:route-table/rtb-03e644e4b639e5b50",
            "id": "rtb-03e644e4b639e5b50",
            "owner_id": "267527029953",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07841a1b32cc09f12",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "rtb-03e644e4b639e5b50",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"publicrt1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:route-table/rtb-0b1dac3537c4c13bf",
            "id": "rtb-0b1dac3537c4c13bf",
            "owner_id": "267527029953",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005217b3af471db5b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "rtb-0b1dac3537c4c13bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private_subnet_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:subnet/subnet-03aa649d29f590c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa649d29f590c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267527029953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_private_subnet_1_us-east-1a"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_1_us-east-1a"
            },
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "subnet-03aa649d29f590c31",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private_subnet_2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:subnet/subnet-0928958fd18958ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0928958fd18958ac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267527029953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_private_subnet_2_us-east-1b"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_2_us-east-1b"
            },
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "subnet-0928958fd18958ac0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private_subnet_3\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:subnet/subnet-0b6fbb803c3d2bba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6fbb803c3d2bba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267527029953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_private_subnet_3_us-east-1c"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_3_us-east-1c"
            },
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "subnet-0b6fbb803c3d2bba2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public_subnet_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:subnet/subnet-0f2c343d0a97ad629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2c343d0a97ad629",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267527029953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_public_subnet_1_us-east-1a"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_1_us-east-1a"
            },
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "subnet-0f2c343d0a97ad629",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public_subnet_2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:subnet/subnet-03c39e458514f2a95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c39e458514f2a95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267527029953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_public_subnet_2_us-east-1b"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_2_us-east-1b"
            },
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "subnet-03c39e458514f2a95",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public_subnet_3\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:subnet/subnet-0133b2b34ab1211c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0133b2b34ab1211c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267527029953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_public_subnet_3_us-east-1c"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_3_us-east-1c"
            },
            "vpc_id": "vpc-004ff034208b3ae22"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "subnet-0133b2b34ab1211c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267527029953:vpc/vpc-004ff034208b3ae22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da6f4133caddb343",
            "default_route_table_id": "rtb-0059e5fa3aa3e72d5",
            "default_security_group_id": "sg-011af7e8770d7cc71",
            "dhcp_options_id": "dopt-0411c79aae9a90042",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004ff034208b3ae22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0059e5fa3aa3e72d5",
            "owner_id": "267527029953",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_VPC"
            },
            "tags_all": {
              "Name": "EKS_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "267527029953",
            "id": "vpc-004ff034208b3ae22",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}